--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@
     position: relative;
     z-index: 2;
 }
+
+.background_circle {
+    background-image: linear-gradient(97.59deg, rgb(255, 109, 56) 0%, rgb(219, 122, 33) 100.53%);
+    transform: translate(50%);
+}
