--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,34 @@
     z-index: 2;
 }
 
+
 .background_circle {
     background-image: linear-gradient(97.59deg, rgb(255, 109, 56) 0%, rgb(219, 122, 33) 100.53%);
     transform: translate(50%);
 }
+
+
+
+@media (min-width:1000px) {
+    .small_screen_nav{
+        display: none;
+    }
+}
+
+
+@media (max-width:1000px) {
+    .my_trip {
+        display: none;
+    }
+    .large_screen_nav{
+        display: none;
+    } 
+}
+
+@media (max-width:800px) {
+    .footer_data{
+        flex-direction: column;
+        background-color: green;
+    }
+}
+
